engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/detail.less
/* ... */
@media screen and(min-width: @desktopViewportWidth) {

	.product--details {

        .product--navigation {
            display: block;
            position: relative;

            .navigation--link {
                .unitize-width(26);
                .unitize-height(120);
                .unitize(120, 16, line-height);
                .unitize(10, 16, font-size);
                .unitize(200, 16, top);
                .opacity(0);
                .linear-gradient-horizontal(#ffffff, #f8f8fa);
                display: block;
                position: absolute;
                z-index: 2000;
                border-style: solid;
                border-color: #e6e9ee;
                border-width: 1px 1px 1px 0;
                color: @primaryTextColor;
                text-align: center;

                .link--prev-inner,
                .link--next-inner{
                    display: none;
                }

                &:hover {
                    .linear-gradient-horizontal(#ffffff, #f4f4f4);
                    border-color: @borderColor;
                    color: @primaryColor;
                }
            }

            .link--prev {
                .unitize(-45, 16, left);

                &:before {
                    font-family: 'shopware';
                    content: "\e611";
                }
            }

            .link--next {
                .unitize(-45, 16, right);
                .linear-gradient-horizontal(#f8f8fa, #ffffff);
                border-width: 1px 0 1px 1px;

                &:before {
                    font-family: 'shopware';
                    content: "\e60f";
                }

                &:hover {
                    .linear-gradient-horizontal(#f4f4f4, #ffffff);
                }
            }
        }

        .product--header {
            .unitize(45, 16, padding-top);

            .product--title {
                padding-top: 0;
            }
        }

        .product--supplier {
            .unitize-height(70);
            margin: 0;

            .product--supplier-link {
                .unitize-height(70);
            }
        }

        .action--link {
            .unitize-margin(0, 20, 10, 0);
            display: inline-block;
            width: auto;
            float: left;
        }

        .js--desktop-tab-panel {
            .unitize(40, 16, margin-bottom);
            margin-left: 0;
            margin-right: 0;

            .panel--tab-nav {
                .unitize-margin(0, 50, 0, 0);
            }

            .tab--content {
                border: 1px solid @borderColor;
            }
        }

        .content--description,
        .content--product-reviews {
            .unitize-padding(10, 45, 45, 45);
        }

        .content--related-products,
        .content--similar-products {
            .unitize-padding(30, 45, 20, 45);
        }
    }

    // Product notification
    .product--notification {
        .unitize-margin(0, 0, 20, 0);

        .alert {
            .unitize-margin(0, 0, 10, 0);
        }

        .notification--button {
            .unitize(20, 16, line-height);
        }
    }
}

